--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,3 +68,22 @@ body{
   background-color:  rgba(42, 46, 41, 0.078);
   color: rgb(30, 40, 37) ;
 }
+@media screen and (max-width:426px){
+  .buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .container{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .btn{
+    width: 13rem;
+  }
+  .search{
+    width: 13rem;
+    height: 1.7rem;
+  }
+}
